feat: update sitter schema & service price check
