# src/swagger.json
@@ -308,8 +308,7 @@
                     "maxItems": 3
                   },
                   "is_door_to_door": {
-                    "type": "boolean",
-                    "default": false
+                    "type": "boolean"
                   },
                   "image_list": {
                     "type": "array",
@@ -327,11 +326,8 @@
                 "required": [
                   "service_city",
                   "service_district_list",
-                  "photography_price",
-                  "health_care_price",
-                  "bath_price",
-                  "walking_price",
                   "service_size_list",
+                  "is_door_to_door",
                   "image_list",
                   "service_description"
                 ],
@@ -465,6 +461,17 @@
                         "type": "boolean",
                         "default": false
                       },
+                      "service_city": {
+                        "type": "string",
+                        "nullable": true
+                      },
+                      "service_district_list": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        },
+                        "default": []
+                      },
                       "photography_price": {
                         "type": "number",
                         "nullable": true
@@ -490,9 +497,7 @@
                             "M",
                             "L"
                           ]
-                        },
-                        "minItems": 1,
-                        "maxItems": 3
+                        }
                       },
                       "is_door_to_door": {
                         "type": "boolean",
@@ -501,10 +506,9 @@
                       "image_list": {
                         "type": "array",
                         "items": {
-                          "type": "string"
-                        },
-                        "minItems": 1,
-                        "maxItems": 3
+                          "type": "string",
+                          "format": "uri"
+                        }
                       },
                       "service_description": {
                         "type": "string"
@@ -544,6 +548,7 @@
                     },
                     "required": [
                       "user_id",
+                      "service_city",
                       "photography_price",
                       "health_care_price",
                       "bath_price",
@@ -561,6 +566,11 @@
                       "user_id": "54489faba8bcd77a22dedue8",
                       "has_certificate": true,
                       "has_police_check": true,
+                      "service_city": "臺北市",
+                      "service_district_list": [
+                        "中正區",
+                        "大同區"
+                      ],
                       "photography_price": 100,
                       "health_care_price": 200,
                       "bath_price": 300,
@@ -633,6 +643,17 @@
                       "type": "boolean",
                       "default": false
                     },
+                    "service_city": {
+                      "type": "string",
+                      "nullable": true
+                    },
+                    "service_district_list": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      },
+                      "default": []
+                    },
                     "photography_price": {
                       "type": "number",
                       "nullable": true
@@ -658,9 +679,7 @@
                           "M",
                           "L"
                         ]
-                      },
-                      "minItems": 1,
-                      "maxItems": 3
+                      }
                     },
                     "is_door_to_door": {
                       "type": "boolean",
@@ -669,10 +688,9 @@
                     "image_list": {
                       "type": "array",
                       "items": {
-                        "type": "string"
-                      },
-                      "minItems": 1,
-                      "maxItems": 3
+                        "type": "string",
+                        "format": "uri"
+                      }
                     },
                     "service_description": {
                       "type": "string"
@@ -712,6 +730,7 @@
                   },
                   "required": [
                     "user_id",
+                    "service_city",
                     "photography_price",
                     "health_care_price",
                     "bath_price",
@@ -729,6 +748,11 @@
                     "user_id": "54489faba8bcd77a22dedue8",
                     "has_certificate": true,
                     "has_police_check": true,
+                    "service_city": "臺北市",
+                    "service_district_list": [
+                      "中正區",
+                      "大同區"
+                    ],
                     "photography_price": 100,
                     "health_care_price": 200,
                     "bath_price": 300,
@@ -3694,6 +3718,17 @@
                               "type": "boolean",
                               "default": false
                             },
+                            "service_city": {
+                              "type": "string",
+                              "nullable": true
+                            },
+                            "service_district_list": {
+                              "type": "array",
+                              "items": {
+                                "type": "string"
+                              },
+                              "default": []
+                            },
                             "photography_price": {
                               "type": "number",
                               "nullable": true
@@ -3719,9 +3754,7 @@
                                   "M",
                                   "L"
                                 ]
-                              },
-                              "minItems": 1,
-                              "maxItems": 3
+                              }
                             },
                             "is_door_to_door": {
                               "type": "boolean",
@@ -3730,10 +3763,9 @@
                             "image_list": {
                               "type": "array",
                               "items": {
-                                "type": "string"
-                              },
-                              "minItems": 1,
-                              "maxItems": 3
+                                "type": "string",
+                                "format": "uri"
+                              }
                             },
                             "service_description": {
                               "type": "string"
@@ -3773,6 +3805,7 @@
                           },
                           "required": [
                             "user_id",
+                            "service_city",
                             "photography_price",
                             "health_care_price",
                             "bath_price",
@@ -3790,6 +3823,11 @@
                             "user_id": "54489faba8bcd77a22dedue8",
                             "has_certificate": true,
                             "has_police_check": true,
+                            "service_city": "臺北市",
+                            "service_district_list": [
+                              "中正區",
+                              "大同區"
+                            ],
                             "photography_price": 100,
                             "health_care_price": 200,
                             "bath_price": 300,
@@ -3963,6 +4001,11 @@
                           "user_id": "54489faba8bcd77a22dedue8",
                           "has_certificate": true,
                           "has_police_check": true,
+                          "service_city": "臺北市",
+                          "service_district_list": [
+                            "中正區",
+                            "大同區"
+                          ],
                           "photography_price": 100,
                           "health_care_price": 200,
                           "bath_price": 300,
